<resources>
    <string name="app_name">Practical Test 02</string>
    <string name="server">SERVER</string>
    <string name="server_port">Port</string>
    <string name="connect">Connect</string>
    <string name="client">CLIENT</string>
    <string name="client_address">Address</string>
    <string name="client_port">Port</string>
    <string name="key">Key</string>
    <string name="information_type">Information Type</string>
    <string name="get_key">Get Key</string>
    <string name="value">Value</string>
    <string name="put_key">Put Key</string>
</resources>
